<resources>
    <string name="app_name">Drivo</string>
    <string name="welcome_to_drivo">Welcome to Drivo</string>
    <string name="get_started">Get Started</string>
    <string name="search_hint">Search your dream car....</string>
    <string name="brands">Brands</string>
    <string name="best_cars">Best Cars</string>
    <string name="view_all">View All</string>
    <string name="nearby">Nearby</string>
</resources>